--- a/style.css
+++ b/style.css
@@ -216,7 +216,7 @@ header .nav .contact .callme .material-symbols-outlined {
   width: 60%;
   margin: 0 auto;
 }
-.wrapper .gallery #main-carousel .splide__slide img {
+.wrapper .gallery .gallery-container #main-carousel .splide__slide img {
   width: 100%;
   height: 100%;
   object-fit: cover;
@@ -226,18 +226,18 @@ header .nav .contact .callme .material-symbols-outlined {
   -ms-border-radius: 16px;
   -o-border-radius: 16px;
 }
-.wrapper .gallery #thumbnail-carousel {
+.wrapper .gallery .gallery-container #thumbnail-carousel {
   padding: 1rem 0;
 }
-.wrapper .gallery #thumbnail-carousel .splide__slide {
+.wrapper .gallery .gallery-container #thumbnail-carousel .splide__slide {
   cursor: pointer;
   opacity: 0.5;
 }
-.wrapper .gallery #thumbnail-carousel .splide__slide.is-active {
+.wrapper .gallery .gallery-container #thumbnail-carousel .splide__slide.is-active {
   opacity: 1;
   border: 0;
 }
-.wrapper .gallery #thumbnail-carousel .splide__slide img {
+.wrapper .gallery .gallery-container #thumbnail-carousel .splide__slide img {
   width: 100%;
   height: 100%;
   object-fit: cover;
@@ -246,6 +246,32 @@ header .nav .contact .callme .material-symbols-outlined {
   -moz-border-radius: 4px;
   -ms-border-radius: 4px;
   -o-border-radius: 4px;
+}
+.wrapper .gallery .more-gallery {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 1rem 0;
+}
+.wrapper .gallery .more-gallery a {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0.25rem 1.25rem;
+  border: 1px solid black;
+  border-radius: 100px;
+  -webkit-border-radius: 100px;
+  -moz-border-radius: 100px;
+  -ms-border-radius: 100px;
+  -o-border-radius: 100px;
+}
+.wrapper .gallery .more-gallery a p {
+  font-size: 1.2em;
+  margin: 0;
+}
+.wrapper .gallery .more-gallery a .material-symbols-outlined {
+  font-variation-settings: "FILL" 0, "wght" 300, "GRAD" 0, "opsz" 24;
+  margin-left: 4px;
 }
 .wrapper .detail .section {
   flex-direction: column;
