--- a/style.scss
+++ b/style.scss
@@ -19,7 +19,6 @@ p {
   font-style: normal;
   line-height: 200%;
   font-size: initial;
-
 }
 .heading {
   font-size: 3rem;
@@ -217,41 +216,69 @@ header {
     .gallery-container {
       width: 60%;
       margin: 0 auto;
-    }
-    #main-carousel {
-      .splide__slide img {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-        border-radius: 16px;
-        -webkit-border-radius: 16px;
-        -moz-border-radius: 16px;
-        -ms-border-radius: 16px;
-        -o-border-radius: 16px;
+      #main-carousel {
+        .splide__slide img {
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+          border-radius: 16px;
+          -webkit-border-radius: 16px;
+          -moz-border-radius: 16px;
+          -ms-border-radius: 16px;
+          -o-border-radius: 16px;
+        }
       }
-    }
-    #thumbnail-carousel {
-      padding: 1rem 0;
+      #thumbnail-carousel {
+        padding: 1rem 0;
 
-      .splide__slide {
-        cursor: pointer;
-        opacity: 0.5;
-      }
-      .splide__slide.is-active {
-        opacity: 1;
-        border: 0;
-      }
-      .splide__slide img {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-        border-radius: 4px;
-        -webkit-border-radius: 4px;
-        -moz-border-radius: 4px;
-        -ms-border-radius: 4px;
-        -o-border-radius: 4px;
+        .splide__slide {
+          cursor: pointer;
+          opacity: 0.5;
+        }
+        .splide__slide.is-active {
+          opacity: 1;
+          border: 0;
+        }
+        .splide__slide img {
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+          border-radius: 4px;
+          -webkit-border-radius: 4px;
+          -moz-border-radius: 4px;
+          -ms-border-radius: 4px;
+          -o-border-radius: 4px;
+        }
       }
     }
+    .more-gallery {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding: 1rem 0;
+      a {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 0.25rem 1.25rem;
+        border: 1px solid black;
+        border-radius: 100px;
+        -webkit-border-radius: 100px;
+        -moz-border-radius: 100px;
+        -ms-border-radius: 100px;
+        -o-border-radius: 100px;
+        p {
+          font-size: 1.2em;
+          margin: 0;
+        }
+        .material-symbols-outlined {
+          font-variation-settings: "FILL" 0, "wght" 300, "GRAD" 0, "opsz" 24;
+          margin-left: 4px;
+        }
+      }
+
+    }
+
   }
   .detail {
     .section {
